Downgrade Java to 17 & Spigot to 1.18